<resources>
    <string name="app_name">Premier League Fixtures</string>

    <string name="vs_text">vs</string>
    <string name="display_list_mode_text">Режим отображения списка</string>
    <string name="team_name_text">Название команды</string>
    <string name="search_text">Поиск</string>
    <string name="not_found_text">Ничего не найдено</string>
    <string name="base_url">https://fixturedownload.com/</string>

    <string name="unknown_error_text">Ошибка получения данных</string>
    <string name="retry_text">Повторить запрос</string>
    <string name="cache_text">Показать кеш</string>
    <string name="error_text">Ошибка</string>
    <string name="use_cache_text">Использовать кеш</string>
    <string name="match_round_text">Матч %d Раунд %d</string>
    <string name="score_status_text">"%d : %d\nЗавершено"</string>
</resources>